<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dujiajun.courseblock.MainActivity">
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        android:icon="@drawable/ic_notifications_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@mipmap/ic_settings_applications_black_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_expand"
        android:orderInCategory="100"
        android:title="@string/action_expand"
        android:icon="@mipmap/ic_expand_more_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        android:icon="@drawable/ic_sync_black_24dp"
        app:showAsAction="ifRoom" />

</menu>
