<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CourseActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@mipmap/ic_arrow_back_white_24dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="@dimen/course_activity_title_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/course_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/not_filled_required"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="@dimen/course_activity_title_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/course_id"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_course_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/not_filled"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="@dimen/course_activity_title_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/class_id"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_class_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/not_filled"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="@dimen/course_activity_title_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/location"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/not_filled"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="@dimen/course_activity_title_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/teacher"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_teacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/not_filled"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="@dimen/course_activity_title_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/weeks"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_weeks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/not_filled"
            android:maxLines="1"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="@dimen/course_activity_title_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="0dp"
            android:gravity="center"
            android:text="@string/time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:hint="@string/not_chosen"
            android:maxLines="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/not_chosen"
            android:maxLines="1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/to"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/not_chosen"
            android:maxLines="1"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:layout_width="@dimen/course_activity_title_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/note"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:background="@null"
            android:hint="@string/not_filled"
            android:layout_weight="1"
            android:inputType="textMultiLine" />
    </LinearLayout>


</LinearLayout>