<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/following_courses"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/iv_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/refresh"
            android:src="@drawable/ic_baseline_refresh_24" />


    </LinearLayout>

    <ListView
        android:id="@+id/lv_courses"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:divider="@color/colorDivider"
        android:dividerHeight="1px"
        android:numColumns="auto_fit" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:text="@string/no_course"
        android:textColor="@android:color/black" />
</LinearLayout>